[package]
name = "mih-rs"
version = "0.2.0"
authors = ["Shunsuke Kanda (kampersanda) <shnsk.knd@gmail.com>"]
description = "Multi-index hashing (MIH) for neighbor searches on binary codes in the Hamming space."
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/mih-rs"
repository = "https://github.com/kampersanda/mih-rs"
homepage = "https://github.com/kampersanda/mih-rs"
keywords = ["search", "index", "hamming"]
categories = ["data-structures"]
edition = "2018"

[dependencies]
rand = "0.8.4"
num-traits = "0.2.14"
