[package]
name = "mih-rs"
version = "0.2.1"
authors = ["Shunsuke Kanda (kampersanda) <shnsk.knd@gmail.com>"]
description = "Multi-index hashing (MIH) for neighbor searches on binary codes in the Hamming space."
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/mih-rs"
repository = "https://github.com/kampersanda/mih-rs"
homepage = "https://github.com/kampersanda/mih-rs"
keywords = ["search", "index", "hamming"]
categories = ["data-structures"]
edition = "2018"

[dependencies]
num-traits = "0.2.14"
anyhow = "1.0"
byteorder = "1.4.3"

[dev-dependencies]
rand = "0.8.4"

[workspace]
members = [
    "bench",
]
